M010 implemented
